# draw_triangle

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  PLAN.md
game/: CMakeLists.txt  exception.cpp  exception.h  gl_exception.cpp  gl_exception.h  main.cpp  main.rc  message_box.cpp  message_box.h  platform.h  win32_exception.cpp  win32_exception.h
game/shaders/: col.ps_6_0  col.vs_6_0  pos.vert  pos_col.vert  pos_col.vs_6_0
scripts/: bin2c.py  gl3w.bat  shader_inl.py  str2c.py
templates/: class.cpp  class.h  create_class.py
